fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -366,6 +366,7 @@ table {
   align-self: center;
   justify-content: center;
   flex-grow: 1;
+  overflow: auto;
 }
 
 .legacy-box {
